--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
           rel="stylesheet">
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Bezpieczna dostawa bezkontaktowa"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
